--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 
 </head>
 <body>
+  <h1>day 03</h1>
 
+  <div class="block"></div>
+
+  <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, rem voluptates odit est suscipit quis, autem, eius quas exercitationem temporibus sint at quisquam! Nesciunt id quod beatae dignissimos libero omnis.</span>
+
+  <div class="parent"><div class="child"></div></div>
+
+  <section></section>
+  <section class="hiddenS"></section>
+  <section></section>
+
+  <div class="one"></div>
+  <div class="two"></div>
 <!-- javascript: link at the end of the body tag -->
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
