day-03 in class comlete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 </head>
 <body>
-  <h1>day 03</h1>
+  <div class="jumbotron">
+    <h1>day 03</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere accusantium, ab. Totam placeat, odit adipisci culpa velit fuga sapiente necessitatibus voluptatum eum dolorem repudiandae, iure voluptas. Consequatur cupiditate, iste vero!</p>
+    <button class="btn btn-primary">submit</button>
+    <div class="alert alert-warning">warning</div>
+  </div>
 
   <div class="block"></div>
 
@@ -20,11 +25,11 @@
   <div class="parent"><div class="child"></div></div>
 
   <section></section>
-  <section class="hiddenS"></section>
+  <section class="hidden"></section>
   <section></section>
 
   <div class="one"></div>
-  <div class="two"></div>
+  <div class="two"><span class="glyphicons glyphicons-heart"></span></div>
 <!-- javascript: link at the end of the body tag -->
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
