--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section></section>
 
   <div class="one"></div>
-  <div class="two"><span class="glyphicons glyphicons-heart"></span></div>
+  <div class="two"><span class="glyphicon glyphicon-heart"></span></div>
 <!-- javascript: link at the end of the body tag -->
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
