--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="jumbotron">
-    <h1>day 03</h1>
+    <h1>gh pages test</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere accusantium, ab. Totam placeat, odit adipisci culpa velit fuga sapiente necessitatibus voluptatum eum dolorem repudiandae, iure voluptas. Consequatur cupiditate, iste vero!</p>
     <button class="btn btn-primary">submit</button>
     <div class="alert alert-warning">warning</div>
