--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 
 </head>
 <body>
+  <div class="container-fluid">
+    <!-- insert nav -->
+    <div class="row">
+      <div class="jumbotron col-md-12">
+        <<h1>title</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque odit eius ut, similique adipisci ipsa ullam eos sed quod doloribus!</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <h2>sub head</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6"><div class="col-md-12 well">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, perferendis.</div></div>
+      <div class="col-md-3"><div class="col-md-12 well">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident velit quisquam quae mollitia, aspernatur laborum.</div></div>
+      <div class="col-md-3"></div>
+    </div>
+  </div>
 
 <!-- javascript: link at the end of the body tag -->
   <script
