--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
 
 </head>
 <body>
+  <h1>Flexbox</h1>
+  <!-- <div class="parent">
+    <div class="child">
+      <div class="grandchild"></div>
+    </div>
+  </div> -->
+
+  <div class="parent">
+    <div class="child"><h1>a</h1><p>the number goon</p></div>
+    <div class="child"><h1>a</h1><p>the number goon</p></div>
+    <div class="child"><h1>a</h1><p>the number goon</p></div>
+    <div class="child">4</div>
+    <div class="child">5</div>
+    <div class="child">6</div>
+    <div class="child">7</div>
+    <div class="child">8</div>
+    <div class="child">9</div>
+    <div class="child">10</div>
+    <div class="child">11</div>
+    <div class="child">12</div>
+    <div class="child">13</div>
+    <div class="child">14</div>
+    <div class="child">15</div>
+    <div class="child">16</div>
+    <div class="child">17</div>
+    <div class="child">18</div>
+    <div class="child">19</div>
+    <div class="child">20</div>
+    <div class="child">21</div>
+    <div class="child">22</div>
+    <div class="child">23</div>
+    <div class="child">24</div>
+  </div>
 
 <!-- javascript: link at the end of the body tag -->
   <script
